--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+    box-sizing: border-box;
     background-color: rgb(61, 45, 119);
 }
 
@@ -30,4 +31,8 @@ button {
     background-color: blue;
 }
 
+.submit {
+   display: flex;
+   justify-content: space-between;
+}
 
